Add get profile endpoint
